# astrolab

./: .gitattributes  .gitignore  README.md
backend/: .env.example  pyproject.toml
backend/alembic/: env.py
backend/app/: __init__.py  config.py  db.py  main.py
backend/scripts/: blog_chrome.py  blog_index.py  catalog_ingest.py  fetch_de_facts.py  fetch_de_facts_adzuna.py  fetch_es_facts.py  fetch_es_facts_adzuna.py  fetch_fr_facts.py  fetch_fr_facts_adzuna.py  fetch_ru_facts.py  fetch_ru_facts_hh.py  fetch_us_facts.py  indexnow_ping.py  retention_cleanup.py  seed_education.py  seed_facts.py  seed_i18n_de.py  seed_i18n_es.py  seed_i18n_fr.py  seed_questions.py  seed_questions_de.py  seed_questions_en.py  seed_questions_es.py  seed_questions_fr.py  stats.py
backend/seed/: adzuna_queries_de.json  adzuna_queries_es.json  adzuna_queries_fr.json  education_de.json  education_es.json  education_fr.json  education_ru.json  education_us.json  email_templates.json  facts_de.json  facts_de_adzuna.json  facts_es.json  facts_es_adzuna.json  facts_fr.json  facts_fr_adzuna.json  facts_hh.json  facts_ru.json  facts_us.json  hh_queries.json  i18n_de_batchA.json  i18n_de_batchB.json  i18n_de_batchC.json  i18n_es_batchA.json  i18n_es_batchB.json  i18n_es_batchC.json  i18n_fr_batchA.json  i18n_fr_batchB.json  i18n_fr_batchC.json  interview_v1.json  next_steps.json  occupations_batch1.json  occupations_batch2.json  occupations_batch3.json  parent_tips.json  questions_de.json  questions_en.json  questions_es.json  questions_fr.json  questions_v1.json  questions_v2.json  (+4 more)
(+197 files in other folders)
